--- a/src/main.scss
+++ b/src/main.scss
@@ -1,6 +1,32 @@
 @charset "utf-8";
 
-/* Bulma Variable overrides */
-$primary: rgb(33, 43, 187);
+/* Bulma CSS and Extensions */
+$primary: rgb(33, 37, 37);
+
+$gap: 32px;
+$tablet: 400px;
+$desktop: 600px + (2 * $gap);
+$widescreen: 1152px + (2 * $gap);
+$fullhd: 1344px + (2 * $gap);
 
 @import "~bulma/bulma";
+
+/* Custom Fonts */
+@import "~@fontsource/comfortaa/index.css";
+
+/* NoFlo Editor Stylesheets */
+@import "noflo/themes/the-graph-dark.css";
+@import "noflo/themes/the-graph-light.css";
+
+/* Global CSS */
+body {
+	position: absolute;
+	width: 100%;
+	height: 100%;
+	display: flex;
+	flex-flow: column;
+}
+
+p {
+	font-family: "comfortaa";
+}
