Re-add editor overlay - to test on mobile

--- a/src/noflo/themes/the-graph-dark.css
+++ b/src/noflo/themes/the-graph-dark.css
@@ -1,5 +1,5 @@
 .the-graph-dark .the-graph-app {
-  background-color: #000;
+  background-color: rgba(0, 0, 0, 0.8);
   position: relative;
 }
 .the-graph-dark svg {
