--- a/src/scss/the-graph-light.scss
+++ b/src/scss/the-graph-light.scss
@@ -1,5 +1,5 @@
 .the-graph-light .the-graph-app {
-  background-color: #fff;
+  background-color: rgba(255, 255, 255, 0.8);
   position: relative;
 }
 .the-graph-light svg {
