--- a/src/main.scss
+++ b/src/main.scss
@@ -1,15 +1,15 @@
 @charset "utf-8";
 
 /* Global constants and bulma overrides */
-@use "scss/_constants.scss";
-@use "scss/theme.scss";
+@use "styles/_constants.scss";
+@use "styles/theme.scss";
 
 /* NoFlo Fontawesome Patch */
-@use "scss/_fontawesome.scss";
+@use "styles/_fontawesome.scss";
 
 /* NoFlo Editor Stylesheets */
-@use "scss/the-graph-dark.scss";
-@use "scss/the-graph-light.scss";
+@use "styles/the-graph-dark.scss";
+@use "styles/the-graph-light.scss";
 
 /* Bulma CSS */
 @import "~bulma/bulma";
